--- a/Assingment1.html
+++ b/Assingment1.html
@@ -1,15 +1,11 @@
-<!DOCTYPE.html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset+"UTF-8" />
+    <meta charset="UTF-8" />
     <title>Arts Technology Program (ATK)</title>
   </head>
   <body>
-    <h1></h1>
     <p> </p>
-    <!-- Comment -->
-  </body>
-</html>
 <h1>Arts Technology Program (ATK)</h1>
 
 <p><b>110 Center for Visual Arts</b>
@@ -123,3 +119,5 @@ Pursuit of individualized creative projects in Arts Technology. May include peri
 <h3>398 PROFESSIONAL PRACTICE: COOPERATIVE EDUCATION/INTERNSHIP IN ARTS MICRO COMPUTER APPLICATIONS</h3>
 
 Internship providing the opportunity to apply knowledge of arts technology in arts agencies, business and/or education settings.  Prerequisites: ATK 201; 1 course selected from ATK 301; MUS 211; or ART 371 or THE 360. Junior/senior standing in area of concentration; 2.50 G.P.A.
+</body>
+</html>
