--- a/ATK 301/page 2.html
+++ b/ATK 301/page 2.html
@@ -3,22 +3,27 @@
   <head>
     <meta charset="UTF-8">
     <title>Requirements</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <header>
     <h1>Requirements</h1>
+  </header>
     <img src="Course-Info.png" alt="Photo of someone teaching students" >
+    <nav>
     <ul>
       <li><a href="main paige.html">Main Page</a></li>
       <li><a href="page 2.html">Requirements</a></li>
       <li><a href="page 3.html">Course Info</a></li>
     </ul>
-
+  </nav>
+<main>
 <h2>Admission and Retention Requirements:</h2>
 
-<p>All students must undergo a portfolio review and/or an interview with the Arts Technology Admissions Committee before being admitted into the program. The Committee will evaluate admission requests from new beginning freshman, new transfer students, and internal transfers. The Arts Technology program reserves the right to maintain a balanced enrollment and the number of students wishing to enter the Arts Technology program may be restricted.</p>
+All students must undergo a portfolio review and/or an interview with the Arts Technology Admissions Committee before being admitted into the program. The Committee will evaluate admission requests from new beginning freshman, new transfer students, and internal transfers. The Arts Technology program reserves the right to maintain a balanced enrollment and the number of students wishing to enter the Arts Technology program may be restricted.
 
-<p>Students will be allowed to continue in the Arts Technology program who have met and continue to maintain a cumulative GPA of 2.50 and have demonstrated competency through an intermediate portfolio review.</p>
-
+Students will be allowed to continue in the Arts Technology program <span class="spanstyle">who have met and continue to maintain a cumulative GPA of 2.50 and have demonstrated competency through an intermediate portfolio review.</span>
+<div id="divexample">
 <h3>Academic Requirements:</h3>
 
 <i>The 55 hours required for the degree are programmed as follows:</i>
@@ -47,8 +52,9 @@ This group of courses provides the student with fine arts training in the histor
 <h5>Theatre</h5>
 
 18 hours from the following: DAN 119; THE 101, 102, 110, 130, 160, 258, 260, 261 or 344.
+</main>
 
-
+<footer>
 <h4>Additional Arts Technology Study (15 hours)</h4>
 
 Select from the following courses after completion of the Fine Arts Core, the Arts Technology Core, and the Arts Technology intermediate portfolio review.
@@ -63,3 +69,4 @@ Select from the following courses after completion of the Fine Arts Core, the Ar
 <h4>Capstone Experience in Arts Technology (3 hours)</h4>
 
 Internship in Arts Technology (ATK 398 or comparable culminating experience in multimedia design as approved by the program advisor e.g. ATK 260).
+</div>
