--- a/ATK 301/page 3.html
+++ b/ATK 301/page 3.html
@@ -3,63 +3,73 @@
   <head>
     <meta charset="UTF-8">
     <title>Course Listing</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <header>
     <h1>Course Listing</h1>
+  </header>
+
     <img src="ATK.png" alt="Banner Wording Promoting ATK Program at ISU" >
+    <nav>
     <ul>
       <li><a href="main paige.html">Main Page</a></li>
       <li><a href="page 2.html">Requirements</a></li>
       <li><a href="page 3.html">Course Info</a></li>
     </ul>
+  </nav>
 
+  <main>
+<div id="divexample">
 <h2>Arts Technology Courses (ATK)</h2>
 
 <h3>BASIC SKILLS IN THE DIGITAL ARTS</h3>
 
-Introduction to the conceptual and technical skills required to capture, edit, and create digital graphics, audio, and video imagery. Prerequisite: Fine Arts major/minor or consent instructor.
+<p>Introduction to the conceptual and technical skills required to capture, edit, and create digital graphics, audio, and video imagery. Prerequisite: Fine Arts major/minor or consent instructor.</p>
 
 <h3>240 SOUND DESIGN 1: BEGINNING DIGITAL AUDIO</h3>
 
-Introduction to digital audio and aesthetic principles of sound.  Prerequisite: Arts
-Technology major or consent of the instructor.
+<p>Introduction to digital audio and aesthetic principles of sound.  Prerequisite: Arts
+Technology major or consent of the instructor.</p>
 
 <h3>260 ARTS TECHNOLOGY PERFORMANCE STUDIO</h3>
 
-Creative and interdisciplinary experiences in solo and ensemble performance integrating computer technology into music, dance, performance art, or theatre production.  Prerequisite: Consent of the instructor.
+<p>Creative and interdisciplinary experiences in solo and ensemble performance integrating computer technology into music, dance, performance art, or theatre production.  Prerequisite: Consent of the instructor.</p>
 
 <h3>300 COMPUTER ARTS APPLICATIONS</h3>
 
-Variable topic course that focuses on the application of computer software to solving studio, performance, and production problems in the arts. Multiple enrollments are allowed if content is different.  Prerequisite: Consent of the instructor.
+<p>Variable topic course that focuses on the application of computer software to solving studio, performance, and production problems in the arts. Multiple enrollments are allowed if content is different.  Prerequisite: Consent of the instructor.</p>
 
 <h3>301 SOFTWARE DESIGN IN THE ARTS I</h3>
 
-Designing and programming microcomputer-based software which solve particular applications problems in the fine arts.
+<p>Designing and programming microcomputer-based software which solve particular applications problems in the fine arts.</p>
 
 <h3>302 COMPUTER PROGRAMMING FOR CREATIVES</h3>
 
-Text-based, object-oriented, computer programming concepts for areas including interactive design, user interfaces, data visualization, and gaming.  Prerequisite: Arts Technology major or consent of the instructor or graduate standing.
+<p>Text-based, object-oriented, computer programming concepts for areas including interactive design, user interfaces, data visualization, and gaming.  Prerequisite: Arts Technology major or consent of the instructor or graduate standing.</p>
 
 <h3>320 PROGRAMMING DYNAMIC MEDIA</h3>
 
-Programming concepts using a graphical, dataflow environment for media-based performance, interactive installation, and generative art/sound.  Prerequisite: Arts Technology major or consent of the instructor or graduate standing.
+<p>Programming concepts using a graphical, dataflow environment for media-based performance, interactive installation, and generative art/sound.  Prerequisite: Arts Technology major or consent of the instructor or graduate standing.</p>
 
 <h3>340 SOUND DESIGN 2: ADVANCED DIGITAL AUDIO</h3>
 
-Advanced digital audio and aesthetic principles of sound.  Prerequisites: Arts Technology major, ATK 240, or consent of the instructor or graduate standing.
+<p>Advanced digital audio and aesthetic principles of sound.  Prerequisites: Arts Technology major, ATK 240, or consent of the instructor or graduate standing.</p>
 
 <h3>345 SEQUENCING AND DIGITAL AUDIO</h3>
 
-Study of music synthesis through MIDI sequencers, digital sound editing and recording, and the integration of digital audio and MIDI.  Prerequisite: Consent of the instructor or graduate standing.
+<p>Study of music synthesis through MIDI sequencers, digital sound editing and recording, and the integration of digital audio and MIDI.  Prerequisite: Consent of the instructor or graduate standing.</p>
 
 <h3>380 SELECTED TOPICS IN ARTS TECHNOLOGY</h3>
 
-Varied emphases reflecting integration of computers with digital sound/graphic technologies and authoring tools for applications in the arts. Multiple enrollments are allowed if content is different.
+<p>Varied emphases reflecting integration of computers with digital sound/graphic technologies and authoring tools for applications in the arts. Multiple enrollments are allowed if content is different.</p>
 
 <h3>390 DIRECTED PROJECTS/SEMINAR IN ARTS TECHNOLOGY</h3>
 
-Pursuit of individualized creative projects in Arts Technology. May include periodic critiques with other students pursuing directed projects. Multiple enrollments are allowed for a maximum of 6 hours.  Prerequisite: Consent of the instructor.
+<p>Pursuit of individualized creative projects in Arts Technology. May include periodic critiques with other students pursuing directed projects. Multiple enrollments are allowed for a maximum of 6 hours.  Prerequisite: Consent of the instructor.</p>
 
 <h3>398 PROFESSIONAL PRACTICE: COOPERATIVE EDUCATION/INTERNSHIP IN ARTS MICRO COMPUTER APPLICATIONS</h3>
 
-Internship providing the opportunity to apply knowledge of arts technology in arts agencies, business and/or education settings.  Prerequisites: ATK 201; 1 course selected from ATK 301; MUS 211; or ART 371 or THE 360. Junior/senior standing in area of concentration; 2.50 G.P.A.
+<p>Internship providing the opportunity to apply knowledge of arts technology in arts agencies, business and/or education settings.  Prerequisites: ATK 201; 1 course selected from ATK 301; MUS 211; or ART 371 or THE 360. Junior/senior standing in area of concentration; 2.50 G.P.A.</p>
+</div>
+</main>
