--- a/ATK301/ATK301/page 3final.html
+++ b/ATK301/ATK301/page 3final.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Course Listing</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="stylenew.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header>
@@ -44,7 +44,7 @@ Technology major or consent of the instructor.</p>
 
 <p>Designing and programming microcomputer-based software which solve particular applications problems in the fine arts.</p>
 
-<h3>302 COMPUTER PROGRAMMING FOR CREATIVES</h3>   
+<h3>302 COMPUTER PROGRAMMING FOR CREATIVES</h3>
 
 <p>Text-based, object-oriented, computer programming concepts for areas including interactive design, user interfaces, data visualization, and gaming.  Prerequisite: Arts Technology major or consent of the instructor or graduate standing.</p>
 
@@ -71,5 +71,7 @@ Technology major or consent of the instructor.</p>
 <h3>398 PROFESSIONAL PRACTICE: COOPERATIVE EDUCATION/INTERNSHIP IN ARTS MICRO COMPUTER APPLICATIONS</h3>
 
 <p>Internship providing the opportunity to apply knowledge of arts technology in arts agencies, business and/or education settings.  Prerequisites: ATK 201; 1 course selected from ATK 301; MUS 211; or ART 371 or THE 360. Junior/senior standing in area of concentration; 2.50 G.P.A.</p>
-</div>
+
 </main>
+</body>
+</html>
