--- a/ATK301/ATK301/ATK301/assignment6.html
+++ b/ATK301/ATK301/ATK301/assignment6.html
@@ -39,7 +39,7 @@
 </main>
 
 <footer>
-  <p>This footer is Verdana in italics. Don't use the &lt;i&gt; or &lt;em&gt; tags to make this text italicized - use styles instead. The text is centered.</p>
+  This footer is Verdana in italics. Don't use the &lt;i&gt; or &lt;em&gt; tags to make this text italicized - use styles instead. The text is centered.
 </footer>
 
   </div>
