--- a/PortfolioMain.html
+++ b/PortfolioMain.html
@@ -11,15 +11,19 @@
 	<div id="wrapper">
 		<!-- These dummy columns are just to show the grid columns, replace with your HTML -->
 		<header>
+			<center>
 			<h1>    Meaghan Daugherty's Portfolio</h1>
+		</center>
 		</header>
+
 		<nav>
 			<ul>
-				<li><a href="#">Main</a></li>
-				<li><a href="#">Projects</a></li>
-				<li><a href="#">Other</a></li>
+				<li><a href=PortfolioMain.html>Main</a></li>
+				<li><a href=PortfolioProjects.html>Performances</a></li>
+				<li><a href=PortfolioOther.html>Other</a></li>
 			</ul>
 			</nav>
+
 			<aside>
 	 	 <img src="Desk.png" alt="Studying Desk">
 	 	 	<img src="PhotoPortfolio.png" alt="Writing">
@@ -37,7 +41,7 @@
 			<h2> Welcome!</h2>
 			<p> Hi there! Thanks for checking out my portfolio page. My name is Meaghan Daugherty and I am currently a sophomore student at Illinois State University. Majoring in Creative Technology, I have had the pleasure of studying in classes such as Web Design and Sound Design. This portfolio page was created by me and I would love for you to check out my stuff! In my projects tab, I have some examples of things I have been working on in the past 2 years that I've studied at Illinois State. I have HTML and CSS experience using Atom and Github that allowed me to create my own portfolio. I also have sound design experience using Adobe Audition and GarageBand. I personally have really enjoyed the work that these courses have brought me, and cannot wait to use the things that I have learned when I graduate. </p>
 			<p> I hope to pursue a career in Web Development or a career within the Music Industry. I have studied music business and love all things art related. I think it would be an amzing opportunity to be able to make a living doing something I am truly passionate about.<p>
-			<p> Thank you so much for checking out my page! For any additional contact information or questions, please visit the "Other" page at the top of the screen. </p>
+			<p> Thank you so much for checking out my page! For any additional contact information or questions, please visit the "Other" page at the top of the screen. You can also find more about me there! </p>
    </main>
 
 
