--- a/PortfolioMain.html
+++ b/PortfolioMain.html
@@ -12,7 +12,7 @@
 		<!-- These dummy columns are just to show the grid columns, replace with your HTML -->
 		<header>
 			<center>
-			<h1>    Meaghan Daugherty's Portfolio</h1>
+			<h1>    Meaghan Daugherty</h1>
 		</center>
 		</header>
 
