--- a/PortfolioOther.html
+++ b/PortfolioOther.html
@@ -13,9 +13,9 @@
 
 
 <header>
-  <center>
+
 	<h1>Other Info and Contact</h1>
-  </center>
+
  </header>
 <nav>
 	<ul>
@@ -31,11 +31,14 @@
 
 <main>
 	<section class="roundedbox">
-    <center>
+    
     <h2> About </h2>
 
-    <p> I have been involved in the arts for as long as I can remember. Growing up, my grandmother taught me the basics of music and singing. As a retired performer, she really opened my eyes to the creative world and taught me that anything is possible in this life. I grew up on the voices of Judy Garland, Ella Fitzgerald, Frank Sinatra, and Dean Martin. My young interest in music pushed me into the curiosity of performance. I began performing in choir around the age of 6, got involved in
-            voice lessons, and eventually joined my school band in the fifth grade. I continued my creative career into middle school, still in band and choir, and then starring in two musical productions- "Annie" and Disney's "The Little Mermaid." I found my true voice during this time, pushing me to go farther into my music career in highschool. In highschool I played clarinet and tenor saxophone for our Symphonic and Jazz bands. Traveling across the country to perform, I found my true passion singing with the Jazz Band. That experience pushed me to really pursue a creative career. I now still enjoy playing instruments and singing, and am able to go after a degree that still allows me to have a creative outlet in the work place. While a lot of careers in the arts can be frowned upon, I knew what I wanted to pursue, and have been willing to do the work to get there ever since. I hope that by visiting my page, you take something away from it. Wether it be inspiration for you to follow you passion or if you simply need me to create a website or mix a song for you, I really hope you enjoyed your look around my page!</p>
+    <p> I have been involved in the arts for as long as I can remember. Growing up, my grandmother taught me the basics of music and singing. As a retired performer, she really opened my eyes to the creative world and taught me that anything is possible in this life.</p>
+		<p> I grew up on the voices of Judy Garland, Ella Fitzgerald, Frank Sinatra, and Dean Martin. My young interest in music pushed me into the curiosity of performance. I began performing in choir around the age of 6, got involved in
+            voice lessons, and eventually joined my school band in the fifth grade. I continued my creative career into middle school, still in band and choir, and then starring in two musical productions- "Annie" and Disney's "The Little Mermaid."
+		I found my true voice during this time, pushing me to go farther into my music career in highschool. <p> In highschool I played clarinet and tenor saxophone for our Symphonic and Jazz bands. Traveling across the country to perform, I found my true passion singing with the Jazz Band. That experience pushed me to really pursue a creative career. </p>
+		<p> I now still enjoy playing instruments and singing, and am able to go after a degree that still allows me to have a creative outlet in the work place. While a lot of careers in the arts can be frowned upon, I knew what I wanted to pursue, and have been willing to do the work to get there ever since. I hope that by visiting my page, you take something away from it. Wether it be inspiration for you to follow you passion or if you simply need me to create a website or mix a song for you, I really hope you enjoyed your look around my page!</p>
 </center>
     <p> For questions or business inquiries, please refer to my email contact:
       medaug1@ilstu.edu </p>
